# models/paymentModel.js
@@ -5,7 +5,7 @@ const paymentSchema = new mongoose.Schema({
   paymentOpt: { type: String, default: null },
   currency: String,
   amount: Number,
-  timmingSlot: String,
+  // timmingSlot: String,
   ticket: { type: mongoose.Schema.Types.ObjectId, ref: "ticketInfo" },
   userName: String,
   createdAt: { type: Date, default: Date.now },
